--- a/example.html
+++ b/example.html
@@ -11,6 +11,10 @@
    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://mzobe456.github.io/Module2_solution/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,8 +26,18 @@
     <header>
       <nav id="header-nav" class="navbar navbar-custom">
          <div class="container-fluid">
-  
-        </div>
+           <div class="navbar-header">
+             <a href="example.html" class"pull-left visible-md visible-lg">
+               <div id="logo-img" alt="logo image"></div>
+             </a>  
+             
+             <div class="navbar-brand">
+               <a href="example.html"><h1>Naruto</h1></a>
+               <p>
+                 <span>Shipudden</span>
+               <p/>
+             </div>  
+         </div>
       </nav>
     </header>
 
