--- a/example.html
+++ b/example.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <nav id="header-nav" class="navbar navbar-custom">
+      <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container-fluid">
            <div class="navbar-header">
              <a href="example.html" class="pull-right vertical-md vertical-lg">
