--- a/example.html
+++ b/example.html
@@ -27,7 +27,7 @@
       <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container-fluid">
            <div class="navbar-header">
-             <a href="example.html" class="pull-right vertical-md vertical-lg">
+             <a href="example.html" class="pull-left vertical-md vertical-lg">
                <div id="logo-img" alt="logo image"></div>
              </a>  
              
