--- a/example.html
+++ b/example.html
@@ -15,19 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  
   </head>
   <body>
     <header>
       <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container-fluid">
            <div class="navbar-header">
-             <a href="example.html" class="pull-left vertical-md vertical-lg">
+             <a href="example.html" class="pull-left">
                <div id="logo-img" alt="logo image"></div>
              </a>  
              
