--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>David Chu's China Bistro</title>
+    <title>Naruto</title>
 
     <!-- Bootstrap -->
    <!-- Latest compiled and minified CSS -->
@@ -20,9 +20,9 @@
   <body>
     <header>
       <nav id="header-nav" class="navbar navbar-defualt">
-         <div class="container-fluid">
+         <div class="container">
            <div class="navbar-header">
-             <a href="example.html" class="pull-left">
+             <a href="example.html" class="pull-left vertical-mg vertical-lg">
                <div id="logo-img" alt="logo image"></div>
              </a>  
              
