--- a/example.html
+++ b/example.html
@@ -22,7 +22,7 @@
       <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container">
            <div class="navbar-header">
-             <a href="example.html" class="pull-left vertical-mg vertical-lg">
+             <a href="example.html" class="pull-left visible-md visible-lg">
                <div id="logo-img" alt="logo image"></div>
              </a>  
              
