--- a/example.html
+++ b/example.html
@@ -44,9 +44,23 @@
            <div id="collapsable-nav" class="collapse navbar-collapse">
              <ul id="nav-list" class="nav navbar-nav navbar-right">
                <li>
-                 <
+                 <a href="menu-categories.html">
+                    <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> Menu</a>
                </li>
-           
+               <li>
+                 <a href="#">
+                   <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> About</a>
+               </li> 
+               <li>
+                 <a href="#">
+                    <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> Awards</a>
+               </li>
+               <li id="phone" class="hidden-xs">
+                 <a href="Contact:078-670-2425">
+                   <span>078-670-2425</span></a><div>*Web-Arthur</div>
+               </li>
+             </ul><!-- #nav-list -->
+           </div><!-- .collapae .navbar-collapse -->  
         </div>        
       </nav>    
     </header>
