--- a/example.html
+++ b/example.html
@@ -29,7 +29,7 @@
              <div class="navbar-brand">
                <a href="example.html"><h1>Naruto</h1></a>
                <p>
-                 <span>Shipudden</span>
+                 <span>SHIPPUDEN</span>
                <p/>
              </div> 
              
@@ -45,15 +45,15 @@
              <ul id="nav-list" class="nav navbar-nav navbar-right">
                <li>
                  <a href="menu-categories.html">
-                    <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> Menu</a>
+                    <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
                </li>
                <li>
                  <a href="#">
-                   <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> About</a>
+                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> About</a>
                </li> 
                <li>
                  <a href="#">
-                    <span class="glyphicon glyphicon-cutlerly"></span><br class="hidden-xs"> Awards</a>
+                    <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Awards</a>
                </li>
                <li id="phone" class="hidden-xs">
                  <a href="Contact:078-670-2425">
