--- a/example.html
+++ b/example.html
@@ -29,11 +29,11 @@
              <div class="navbar-brand">
                <a href="example.html"><h1>Naruto</h1></a>
                <p>
-                 <span>SHIPPUDEN</span>
-               <p/>
+                 <span>Shippuden</span>
+               <\p>
              </div> 
              
-             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse" aria-expanded="false">
                <span class="sr-only">Toggle navigation</span>
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
