--- a/example.html
+++ b/example.html
@@ -29,8 +29,7 @@
              <div class="navbar-brand">
                <a href="example.html"><h1>Naruto</h1></a>
                <p>
-                 <span>Shippuden</span>
-               <\p>
+                 <span>Shippuden</span></p>
              </div> 
              
              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse" aria-expanded="false">
