--- a/example.html
+++ b/example.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <header>
+      <script src="http://code.jquery.com/jquery-1.8.3.js" type="text/javascript"></script>
       <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container">
            <div class="navbar-header">
