--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <script src="http://code.jquery.com/jquery-1.8.3.js" type="text/javascript"></script>
+      <script src="https://code.jquery.com/jquery-1.8.3.js" type="text/javascript"></script>
       <nav id="header-nav" class="navbar navbar-defualt">
          <div class="container">
            <div class="navbar-header">
@@ -67,7 +67,10 @@
       </nav>  
       
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+      <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+      crossorigin="anonymous"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     </header>
