--- a/example.html
+++ b/example.html
@@ -45,15 +45,15 @@
              <ul id="nav-list" class="nav navbar-nav navbar-right">
                <li>
                  <a href="menu-categories.html">
-                    <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+                    <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Ramen</a>
                </li>
                <li>
                  <a href="#">
-                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> About</a>
+                   <span class="glyphicon glyphicon glyphicon-user"></span><br class="hidden-xs"> Ninja</a>
                </li> 
                <li>
                  <a href="#">
-                    <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Awards</a>
+                    <span class="glyphicon glyphicon glyphicon-globe"></span><br class="hidden-xs"> Kohana</a>
                </li>
                <li id="phone" class="hidden-xs">
                  <a href="Contact:078-670-2425">
