--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav id="header-nav" class="navbar navbar-defualt">
-         <div class="container">
+         <div class="container-fluid">
            <div class="navbar-header">
              <a href="example.html" class="pull-left visible-md visible-lg">
                <div id="logo-img" alt="logo image"></div>
